FlexDeploy 8.0.0.3/fdtlt88/SalesSummary-Project/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Month__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Summary Month</label>
        <referenceTo>Summary__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Summary_Month__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>